--- a/public/css/reset.css
+++ b/public/css/reset.css
@@ -6,7 +6,7 @@ body {
   padding: 0;
   background: white;
   width: 100%;
-  color: #8c8c8c;
+  color: #666666;
   word-wrap: break-word; }
   body a {
     text-decoration: none;
