--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,12 +14,21 @@
     min-height: 768px; }
 
 .main {
-  width: 100%; }
+  width: 100%;
+  background: #f9f9f9;
+  padding: 20px 0; }
   .main .main-wrapper {
-    margin: 0px auto;
-    width: 1040px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+    border-radius: 5px;
+    background: #fff;
+    overflow: hidden;
+    margin: 60px auto 10px;
+    width: 1130px;
     min-height: 650px;
-    padding: 100px 10px 50px;
+    padding: 30px;
     color: #666; }
     .main .main-wrapper:before, .main .main-wrapper:after {
       content: "";
@@ -29,7 +38,7 @@
 
 .content {
   float: left;
-  width: 740px; }
+  width: 800px; }
   .content .list-wrapper h1 {
     float: left;
     margin: 0;
@@ -40,7 +49,7 @@
 
 .sidebar {
   margin-left: 30px;
-  width: 270px;
+  width: 300px;
   float: left; }
   .sidebar h3, .sidebar h4 {
     margin-bottom: 10px; }
@@ -49,6 +58,7 @@
   .sidebar .ad {
     width: 100%; }
     .sidebar .ad img {
+      width: 100%;
       max-width: 100%; }
   .sidebar .back-action a {
     font-size: 14px; }
@@ -104,7 +114,7 @@
   width: 100%;
   overflow: hidden; }
   .topic-list li {
-    border-bottom: 1px solid #e8e8e8;
+    border-bottom: 1px solid #f0f0f0;
     position: relative;
     padding: 10px; }
     .topic-list li:before, .topic-list li:after {
@@ -120,10 +130,11 @@
         vertical-align: middle;
         font-size: 14px; }
       .topic-list li h2 a {
-        color: #111;
+        color: #333;
         vertical-align: middle; }
     .topic-list li .author-avatar {
       width: 48px;
+      margin-right: 2px;
       float: left; }
       .topic-list li .author-avatar img {
         background: #fff;
@@ -137,15 +148,15 @@
     .topic-list li .topic-title {
       float: left;
       overflow: hidden;
-      width: 61%;
-      padding: 0 2%; }
+      width: 500px;
+      padding: 0 20px; }
     .topic-list li .topic-detail {
       line-height: 48px;
       float: left;
-      width: 10%; }
+      width: 90px; }
     .topic-list li .topic-last-reply {
       line-height: 48px;
-      width: 15%;
+      width: 100px;
       float: left; }
 
 .last-reply-list ul li {
@@ -223,26 +234,26 @@
     list-style-type: lower-latin;
     list-style-position: inside;
     margin-left: 15px; }
-.topic-main .topic-meta:before, .topic-main .topic-meta:after {
-  content: "";
-  display: table; }
-.topic-main .topic-meta:after {
-  clear: both; }
-.topic-main .topic-meta li {
-  color: #ccc;
-  margin-right: 20px;
-  float: left; }
-  .topic-main .topic-meta li a {
-    display: inline-block;
-    color: #ccc; }
-    .topic-main .topic-meta li a:hover {
-      color: #999; }
-  .topic-main .topic-meta li.share i {
-    cursor: pointer;
-    font-size: 14px;
-    margin-right: 5px; }
-.topic-main .topic-meta .fa-clock-o {
-  font-size: 16px; }
+.topic-main .topic-meta {
+  font-size: 14px; }
+  .topic-main .topic-meta:before, .topic-main .topic-meta:after {
+    content: "";
+    display: table; }
+  .topic-main .topic-meta:after {
+    clear: both; }
+  .topic-main .topic-meta li {
+    color: #ccc;
+    margin-right: 20px;
+    float: left; }
+    .topic-main .topic-meta li a {
+      display: inline-block;
+      color: #ccc; }
+      .topic-main .topic-meta li a:hover {
+        color: #999; }
+    .topic-main .topic-meta li.share i {
+      cursor: pointer;
+      font-size: 14px;
+      margin-right: 5px; }
 
 .history-list li {
   position: relative;
@@ -416,14 +427,13 @@
   font-size: 14px;
   color: #fff;
   background: rgba(0, 0, 0, 0.7);
-  width: 540px;
-  margin: 0 150px; }
+  width: 530px;
+  margin: 0 200px; }
   .reg-form h1, .login-form h1 {
     text-align: center;
     margin-bottom: 30px; }
   .reg-form .row, .login-form .row {
-    margin: 10px 0 0 0;
-    height: 70px; }
+    margin: 30px 0 10px 0; }
   .reg-form input[type="text"], .reg-form input[type="password"], .login-form input[type="text"], .login-form input[type="password"] {
     width: 80%;
     padding: 10px 2%;
@@ -693,7 +703,7 @@
 .message-list li {
   margin-top: 10px;
   padding: 10px 0;
-  border-bottom: 1px solid #eee; }
+  border-bottom: 1px solid #f0f0f0; }
   .message-list li .user-avatar {
     margin-right: 12px; }
   .message-list li p {
@@ -731,8 +741,20 @@
     .tips-list .action-bar a:hover {
       background: #666; }
 .tips-list .tips-item {
-  border-bottom: 1px solid #ddd;
+  border-bottom: 1px solid #f0f0f0;
   padding: 10px 0; }
+
+.collect-list li {
+  height: 45px;
+  line-height: 45px;
+  border-bottom: 1px solid #f0f0f0; }
+
+.collect-list li .date {
+  color: #999;
+  margin-left: 10px; }
+
+.collect-list li .topic-title:hover {
+  text-decoration: underline; }
 
 .g-tip {
   font-weight: bold;
@@ -771,7 +793,6 @@
 
 .user-wrapper {
   position: relative;
-  margin-top: -49px;
   overflow: hidden; }
   .user-wrapper .user-top-bg {
     position: relative;
@@ -792,7 +813,7 @@
       border-radius: 5px;
       border: 5px solid white; }
   .user-wrapper .user-main {
-    width: 1040px;
+    width: 1130px;
     position: relative; }
     .user-wrapper .user-main:before, .user-wrapper .user-main:after {
       content: "";
@@ -849,27 +870,21 @@
     .user-wrapper .user-bar:after {
       clear: both; }
     .user-wrapper .user-bar .action {
-      color: #999;
-      float: right; }
+      font-size: 13px;
+      vertical-align: middle;
+      float: right;
+      color: #999; }
+      .user-wrapper .user-bar .action .btn {
+        height: 40px; }
       .user-wrapper .user-bar .action a {
-        font-size: 14px;
         margin-left: 10px;
-        color: #999;
-        border: 1px solid #999;
-        padding: 5px 10px;
-        -webkit-border-radius: 3px;
-        -moz-border-radius: 3px;
-        -ms-border-radius: 3px;
-        -o-border-radius: 3px;
-        border-radius: 3px; }
+        background-color: #1abc9c; }
         .user-wrapper .user-bar .action a:hover {
-          color: #fff;
-          background: #999; }
+          background: #48c9b0; }
       .user-wrapper .user-bar .action .following {
         color: #1abc9c; }
       .user-wrapper .user-bar .action #add-relation {
-        color: #1abc9c;
-        border: 1px solid #1abc9c; }
+        color: #1abc9c; }
         .user-wrapper .user-bar .action #add-relation:hover {
           color: #fff;
           background: #1abc9c; }
@@ -884,7 +899,7 @@
     padding: 10px 0 10px 10px;
     float: right; }
     .user-wrapper .user-topics h2, .user-wrapper .user-replys h2 {
-      color: #111;
+      color: #666;
       padding-left: 10px;
       border-left: 5px solid #ddd; }
       .user-wrapper .user-topics h2 .fa, .user-wrapper .user-replys h2 .fa {
@@ -899,7 +914,7 @@
         display: inline-block;
         font-weight: bold;
         text-decoration: none;
-        color: #333; }
+        color: #666; }
         .user-wrapper .user-topics ul li a:hover, .user-wrapper .user-replys ul li a:hover {
           color: #4083aa; }
       .user-wrapper .user-topics ul li span, .user-wrapper .user-replys ul li span {
@@ -946,18 +961,44 @@
     margin: 0; }
 
 #addcar-form h2 {
-  margin-top: 12px; }
+  margin: 12px 0; }
 #addcar-form #showcarname {
   color: #e74c3c; }
 #addcar-form select {
   width: 100px; }
 #addcar-form .wycarname {
   margin: 10px 0; }
-#addcar-form button[type=submit]:hover {
-  background: #5dade2; }
+#addcar-form .caritem .remove-item {
+  display: inline-block;
+  vertical-align: middle;
+  text-align: center;
+  width: 30px;
+  height: 30px;
+  line-height: 30px;
+  color: #e74c3c; }
+#addcar-form .carimgs-list:before, #addcar-form .carimgs-list:after {
+  content: "";
+  display: table; }
+#addcar-form .carimgs-list:after {
+  clear: both; }
+#addcar-form .carimg {
+  float: left; }
+  #addcar-form .carimg img {
+    width: 200px;
+    height: 200px; }
+  #addcar-form .carimg input[type=text] {
+    margin-top: 8px;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    -ms-border-radius: 3px;
+    -o-border-radius: 3px;
+    border-radius: 3px;
+    width: 190px;
+    height: 30px;
+    padding: 0 5px; }
 
-.about h3 {
-  margin-top: 20px; }
+.about h1, .about h3 {
+  margin: 20px 0; }
 
 .user-list {
   width: 100%; }
