--- a/public/sass/vars.scss
+++ b/public/sass/vars.scss
@@ -2,9 +2,9 @@
 //-----------------------
 $font:13px/1.7 'Helvetica Neue',Arial,'Hiragino Sans GB',sans-serif;
 
-$font-color:#8c8c8c;
+$font-color:#666;
 
-$main-width:1040px;
+$main-width:1130px;
 //colors
 //-----------------------
 
