--- a/public/css/nav.css
+++ b/public/css/nav.css
@@ -1,10 +1,10 @@
 .nav {
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
   position: fixed;
   top: 0;
   z-index: 10011;
   width: 100%;
   height: 50px;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
   line-height: 50px;
   color: #fff;
   background: rgba(0, 0, 0, 0.8); }
@@ -14,10 +14,11 @@
   .nav:after {
     clear: both; }
   .nav .nav-container {
+    padding: 0 30px;
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 1040px;
+    width: 1130px;
     height: 50px;
     position: relative; }
     .nav .nav-container:before, .nav .nav-container:after {
@@ -29,7 +30,7 @@
       width: 80px;
       float: left; }
   .nav a {
-    color: #8c8c8c; }
+    color: #666666; }
     .nav a:hover {
       text-decoration: none; }
   .nav .search-form {
@@ -110,8 +111,11 @@
         border-radius: 3px; }
 
 footer {
+  border-top: 2px solid #f6f6f6;
+  width: 100%;
+  height: 90px;
   font-size: 12px;
-  color: #999; }
+  color: #bbb; }
   footer:before, footer:after {
     content: "";
     display: table; }
@@ -120,13 +124,13 @@ footer {
   footer .wrapper {
     line-height: 24px;
     padding: 20px 30px;
-    border-top: 1px solid #f0f0f0;
     margin: 0 auto;
-    width: 1040px; }
+    width: 1130px; }
   footer a {
-    color: #999; }
+    display: inline-block;
+    color: #bbb; }
     footer a:hover {
-      color: #666; }
+      color: #333; }
   footer .ft-meta {
     vertical-align: middle;
     display: block; }
