--- a/public/sass/nav.scss
+++ b/public/sass/nav.scss
@@ -5,17 +5,18 @@ $nav-container-height:50px;
 $menu-width:30px;
 
 .nav{
+    border-bottom:1px solid rgba(0,0,0,0.1);
     position:fixed;
     top:0;
     z-index:10011;
     width:100%;
     height:$nav-height;
-    border-bottom:1px solid rgba(0,0,0,0.1);
     line-height:$nav-height;
     color:#fff;
     background:rgba(0,0,0,.8);
     @include clearfix();
     .nav-container{
+        padding:0 30px;
         @include center-block();
         @include clearfix();
         width:$main-width;
@@ -100,20 +101,23 @@ $menu-width:30px;
 }
 
 footer{
+    border-top:2px solid #f6f6f6;
+    width:100%;
+    height:90px;
     font-size:12px;
+    color:#bbb;
     @include clearfix();
-    color:#999;
     .wrapper{
         line-height:24px;
         padding:20px 30px;
-        border-top:1px solid #f0f0f0;
         margin:0 auto;
         width:$main-width;
     }
     a{
-        color:#999;
+        display:inline-block;
+        color:#bbb;
         &:hover{
-            color:#666;
+            color:#333;
         }
     }
     .ft-meta{
