--- a/public/css/lion.css
+++ b/public/css/lion.css
@@ -1608,8 +1608,26 @@ footer {
   #addcar-form .carimgs-list:after {
     clear: both; }
 #addcar-form .carimg {
+  position: relative;
   float: left;
   margin-right: 30px; }
+  #addcar-form .carimg .remove-img {
+    position: absolute;
+    display: none;
+    top: -10px;
+    left: -10px;
+    width: 20px;
+    height: 20px;
+    text-align: center;
+    background: #fff;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+    border-radius: 10px;
+    color: #e74c3c; }
+    #addcar-form .carimg .remove-img .fa {
+      font-size: 20px; }
   #addcar-form .carimg img {
     width: 200px;
     height: 150px; }
