--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -1040,14 +1040,14 @@
     h2{
         margin:12px 0;
     }
-    #showcarname{
+    #showcarurl{
         color:$action-red;
     }
     select{
         width:100px;
     }
-    .wycarname{
-        margin:10px 0;
+    .wycarurl{
+        margin:10px 0 0 5px;
     }
     .caritem{
         .remove-item{
