--- a/public/sass/style.scss
+++ b/public/sass/style.scss
@@ -1037,11 +1037,20 @@
 }
 //addcar
 #addcar-form{
+    padding:0 30px;
     h2{
-        margin:12px 0;
+        border-bottom:1px solid $border-color;
+        padding-bottom:6px;
+        margin:18px 0;
+    }
+    input[type=text],textarea{
+        width:600px;
     }
     #showcarurl{
         color:$action-red;
+    }
+    label{
+        width:80px;
     }
     select{
         width:100px;
@@ -1093,6 +1102,23 @@
             width:190px;
             height:30px;
             padding:0 5px;
+        }
+    }
+    .ml10{
+        margin-left:10px;
+    }
+    .params{
+        input[type=text]{
+            width:50px;
+            margin-right:5px;
+        }
+        input[type=radio]{
+            vertical-align:middle;
+        }
+    }
+    .base{
+        #cartype{
+            width:400px;
         }
     }
 }
