--- a/public/sass/reset.scss
+++ b/public/sass/reset.scss
@@ -66,7 +66,12 @@ ul,ol{
     margin-right:2px;
     vertical-align:baseline;
     &.fa-spin{
-        color:#999;
+        color:#666;
+    }
+}
+button[type="submit"]{
+    .fa-spin{
+        color:#fff;
     }
 }
 .date{
