--- a/public/sass/reset.scss
+++ b/public/sass/reset.scss
@@ -69,7 +69,7 @@ ul,ol{
         color:#666;
     }
 }
-button[type="submit"]{
+.submit-btn,.upload-trigger,button[type="submit"]{
     .fa-spin{
         color:#fff;
     }
